spacing fix

--- a/src/theme.css
+++ b/src/theme.css
@@ -1,5 +1,6 @@
 :root {
   --background: oklch(0.155 0 0);
+  --background-secondary: oklch(0.17 0 0);
   --background-hover: oklch(0.2 0 0);
   --primary: oklch(0.9 0 0);
   --secondary: oklch(0.825 0 0);
@@ -7,7 +8,7 @@
   --accent: oklch(55% 0.2434 266.905);
   --destructive: oklch(0.577 0.245 27.325);
   --destructive-foreground: oklch(0.97 0.01 17);
-  --shadow: 0 0 1rem 0 oklch(1 0 0 / 0.015);
+  --shadow: 0 0 0.75rem 0 oklch(1 0 0 / 0.015);
   --border: 1px solid oklch(0.225 0 0);
 
   background-color: var(--background);
@@ -16,6 +17,7 @@
 
 :root.light {
   --background: oklch(0.985 0 0);
+  --background-secondary: oklch(0.965 0 0);
   --background-hover: oklch(0.94 0 0);
   --primary: oklch(0.205 0 0);
   --secondary: oklch(0.325 0 0);
@@ -23,7 +25,7 @@
   --accent: oklch(48.662% 0.2494 267.44);
   --destructive: oklch(0.577 0.245 27.325);
   --destructive-foreground: oklch(0.97 0.01 17);
-  --shadow: 0 0 1rem 0 oklch(0 0 0 / 0.035);
+  --shadow: 0 0 0.75rem 0 oklch(0 0 0 / 0.035);
   --border: 1px solid oklch(0.925 0 0);
 
   background-color: var(--background);
